--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 
     <body>
         <header>
-            <img class="logo" src="media/logo.png">
-            <p>Space exploration website</p>
-            <nav class="tops">
+            <nav>
                 <ul>
-                    <li class="top"><a href="1.html">Menu 1</a></li>
-                    <li class="top"><a href="2.html">Menu 2</a></li>
-                    <li class="top"><a href="3.html">Menu 3</a></li>
+                    <li class="navbar"><a class="button" href="2.html">Menu 1</a></li>
+                    <li class="navbar"><a href="index.html"><img class="logo" src="media/logo.png"></a></li>
+                    <li class="navbar"><a class="button" href="3.html">Menu 2</a></li>
                 </ul>
             </nav>
-            </header>
+        </header>
         <article class="article1">
             <p> Article number 1</p>
             <img class="spaceshuttle" src="media/spaceshuttle.jpg">
